[package]
name = "wasm-rusty-checkers"
version = "0.0.1"
authors = ["John <john@real-currents.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
mut_static = "5.0.0"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]
